test to fix home on mobile #1

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import-normalize;
 html {
-  height: 100%;
+  height: 100vh;
 }
 body {
-  height: 100%;
+  height: 100vh;
   box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
